# SolanaOasis-Layer2-Blockchain

./: .editorconfig  .gitignore  .nubscarson  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SUMMARY.md  api.md  architecture.md  bug_report.md  code_of_conduct.md  contributing.md  feature_request.md  pull_request_template.md  requirements.txt  security.md  vercel.json  whitepaper.md  wizard-5.svg:Zone.Identifier
.cargo/: config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
ai-layer/: Cargo.toml
ai-layer/src/: lib.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
components/: Footer.js  MetaHead.js
contracts/: Cargo.toml
contracts/src/: bridge.rs  lib.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md  WHITEPAPER.md
node/: Cargo.toml
node/src/: ai.rs  config.rs  lib.rs  main.rs  metrics.rs  network.rs  proof.rs  rollup.rs  state.rs  types.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
tests/: integration_test.rs  run_local_tests.sh  test_model.py
website/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
website/components/: Footer.js  Layout.js  MetaHead.js
website/pages/: _app.js  build.js  docs.js  download.js  index.js  whitepaper.js
website/pages/ai/: index.tsx
website/pages/aidev/: index.tsx  privacy.tsx
website/pages/api/ai/: create-project.ts  generate-code.ts  generate-project.ts
website/pages/docs/: api.js  architecture.js  bridge.js  index.js  playground.js  protocol.js  sdk.js  security.js
website/public/: openapi.yaml
website/public/.well-known/: ai-plugin.json
website/styles/: globals.css
website/utils/: api-clients.ts
