[package]
name = "solana-oasis-ai-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "=1.14.16"
solana-client = "=1.14.16"
anchor-lang = "=0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tch = { version = "0.10.1", optional = true }
pyo3 = { version = "0.18", features = ["auto-initialize"] }
bincode = "1.3"

[features]
default = []
pytorch = ["tch"] 