[package]
name = "solana-oasis-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "=2.1.8"
solana-program = "=1.14.16"
anchor-lang = "=0.27.0"
spl-token = "=3.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"

[dev-dependencies]
solana-program-test = "=1.14.16"
solana-sdk = "=2.1.8"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
mockall = "0.11"

[lib]
crate-type = ["cdylib", "lib"] 