[package]
name = "solana-oasis-node"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "=1.14.16"
solana-client = "=2.1.7"
tokio = { version = "1.0", features = ["full"] }
libp2p = { version = "0.45.1", features = ["tcp-tokio", "mdns", "gossipsub", "noise", "mplex", "yamux"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
rocksdb = "0.21"
tch = { version = "0.10.1", optional = true }
pyo3 = { version = "0.18", features = ["auto-initialize"] }
tempfile = "3.14"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[bin]]
name = "solana-oasis-node"
path = "src/main.rs"

[features]
default = []
pytorch = ["tch"] 