[package]
name = "solana-oasis-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "=1.14.16"
solana-client = "=1.14.16"
anchor-client = "=0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[lib]
name = "solana_oasis_sdk"
path = "src/lib.rs" 